提交：门禁逻辑补充